--- a/frontend/src/components/invite/popup.css
+++ b/frontend/src/components/invite/popup.css
@@ -5,6 +5,9 @@
     height: 100vh;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
    
   .box {
@@ -19,6 +22,9 @@
     padding: 20px;
     border: 1px solid #999;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
    
   .close-icon {
