added payment method

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,3 +42,7 @@ body.swal2-height-auto {
     overflow: auto;
     width: 100%;
 }
+
+.paypal-link, .razorpay-link, .stripe-link {
+    cursor: pointer;
+}
