--- a/frontend/src/components/Payments/checkout.css
+++ b/frontend/src/components/Payments/checkout.css
@@ -2,6 +2,19 @@
   display: flex;
   align-items: center;
 }
+.accordion-button:not(.collapsed) {
+  color: #ffffff;
+  background-color: #5469d4;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+  display: inline;
+  justify-content: center;
+}
+
+.accordion-button:collapsed {
+  color: #ffffff;
+  background-color: #8a0022;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
