--- a/frontend/src/css/popup.css
+++ b/frontend/src/css/popup.css
@@ -69,3 +69,14 @@
     width: 700;
     padding: 30; 
   }
+
+  .mt-2{
+    padding: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
